# semantic-search

./: .gitignore  README.md  index_workspace.py  pyproject.toml  requirements.txt  search.py
.github/workflows/: ci.yml
tests/: test_helpers.py
